# rt-da

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
src/rt_da/: __init__.py  core.py  diagnostics.py  group.py  plots.py  simulate.py
tests/: test_rt_da.py
validation/: README.md  adapters.py  build_fixtures.py  compare_against_r.py  test_real_data.py
validation/fixtures/: mazor2020.json  sherman_jocn1.json  sherman_jocn2.json
validation/r_reference/: generate_r_reference.R  mazor2020.csv  sherman_jocn1.csv  sherman_jocn2.csv
