[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-da"
version = "0.1.0"
description = "RT-based unequal-variance signal detection (da) - estimate da from response times or confidence"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Trevor Caruso", email = "glopule@yahoo.com" }]
keywords = [
    "signal detection theory", "SDT", "psychophysics", "metacognition",
    "response time", "da", "d-prime", "unequal variance", "ROC",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.4"]
dev = ["pytest>=7.0", "matplotlib>=3.4"]

[project.urls]
Homepage = "https://github.com/trevcaru/rt-da"
Repository = "https://github.com/trevcaru/rt-da"
Funding = "https://ko-fi.com/trevcaru"
"Reference paper" = "https://doi.org/10.1016/j.isci.2026.114998"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "validation"]
# The fit objective is smooth (no inf/NaN cliff), so the blanket
# RuntimeWarning suppression that used to hide the optimizer's NaN-gradient
# warnings is no longer needed.
